#387: Provide Sonar organization

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,6 @@ jobs:
           cache: maven
       - name: Run Sonar analyzing
         # Sonar would require extra preparations
-        run: mvn sonar:sonar -Dsonar.projectKey=leokom-chess
+        run: mvn sonar:sonar \
+          -Dsonar.projectKey=leokom-chess \ 
+          -Dsonar.organization=lrozenblyum-github
