--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,9 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run Sonar analyzing
-        # Sonar would require extra preparations
+        # specified the project key explicitly because I didn't like the automatically generate Maven-based name (com.leokom:chess)
+        # thanks to this explicit specification we're free to change Maven coordinates
+        # the organization key was found here: https://sonarcloud.io/account/organizations
         run: mvn sonar:sonar
           -Dsonar.projectKey=leokom-chess 
           -Dsonar.organization=lrozenblyum-github
