--- a/pom.xml
+++ b/pom.xml
@@ -323,7 +323,7 @@
                             </execution>
                             <execution>
                                 <id>report</id>
-                                <!-- By default 'report' is bound to verify phase but we don't call that yet in Travis -->
+                                <!-- By default 'report' is bound to verify phase but we don't call that yet in CI -->
                                 <phase>test</phase>
                                 <goals>
                                     <goal>report</goal>
