--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - release/**
+      - long-lived/**
   pull_request:
 
 jobs:
@@ -22,10 +23,10 @@ jobs:
         with:
           # unlimited fetch depth for Sonar
           fetch-depth: 0
-      - name: Set up JDK 8
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
+          java-version: '17'
           # some arbitrary distribution selected
           distribution: 'temurin'
           cache: maven
@@ -33,13 +34,6 @@ jobs:
         # -B means: batch-mode (no questions, no progress-related log pollution)
         # coverage profile is needed for test coverage for sonar
         run: mvn test -Pcoverage -B
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          # some arbitrary distribution selected
-          distribution: 'temurin'
-          cache: maven
       - name: Run Sonar analyzing
         # specified the project key explicitly because I didn't like the automatically generate Maven-based name (com.leokom:chess)
         # thanks to this explicit specification we're free to change Maven coordinates
